--- a/.gitignore
+++ b/.gitignore
@@ -12,18 +12,15 @@
 __pycache__/*
 __pycache__
 build
-images/build/*
+kernel/build/*
 memory.dump
 bin/*
 __*
 __*/
 CMakeCache.txt
-images/firmware/CMakeLists.txt
-libraries/graphics/fonts/fonts/fontconvert/fontconvert
-documents/htmldocs
+sdocuments/htmldocs
 texput.log
-libraries/cpuz80/generator/code/*.h
-libraries/cpuz80/_*.h
-images/build/_deps/tinyusb-src
-images/build/_deps/picotool-src
+kerne;/build/_deps/tinyusb-src
+kernel/build/_deps/picotool-src
 host/forth/sod32
+kernel/firmware/CMakeLists.txt
